newtype-tools/tests/trybuild/ops/rem.stderr
error: unexpected end of input, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
 --> tests/trybuild/ops/rem.rs:5:19
  |
5 |     #[newtype(rem())]
  |                   ^

error: expected `,`
  --> tests/trybuild/ops/rem.rs:11:22
   |
11 |     #[newtype(rem(u64))]
   |                      ^

error: unexpected end of input, expected `output`
  --> tests/trybuild/ops/rem.rs:17:23
   |
17 |     #[newtype(rem(u64,))]
   |                       ^

error: expected `=`
  --> tests/trybuild/ops/rem.rs:23:30
   |
23 |     #[newtype(rem(u64, output))]
   |                              ^

error: unexpected end of input, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
  --> tests/trybuild/ops/rem.rs:29:32
   |
29 |     #[newtype(rem(u64, output =))]
   |                                ^

error: expected `,`
  --> tests/trybuild/ops/rem.rs:35:36
   |
35 |     #[newtype(rem(u64, output = u64))]
   |                                    ^

error: unexpected end of input, expected `with`
  --> tests/trybuild/ops/rem.rs:41:37
   |
41 |     #[newtype(rem(u64, output = u64,))]
   |                                     ^

error: expected `=`
  --> tests/trybuild/ops/rem.rs:47:42
   |
47 |     #[newtype(rem(u64, output = u64, with))]
   |                                          ^

error: unexpected end of input, expected an expression
  --> tests/trybuild/ops/rem.rs:53:44
   |
53 |     #[newtype(rem(u64, output = u64, with =))]
   |                                            ^
